--- a/modules/administration-guide/examples/snip_che-configuring-cluster-roles-for-users.adoc
+++ b/modules/administration-guide/examples/snip_che-configuring-cluster-roles-for-users.adoc
@@ -1,9 +1,3 @@
-:_content-type: PROCEDURE
-:description: Configuring cluster roles for {prod-short} users
-:keywords: administration-guide, user, roles, permissions
-:navtitle: Configuring cluster roles for {prod-short} users
-:page-aliases:
-
 [id="configuring-cluster-roles-for-users"]
 = Configuring cluster roles for {prod-short} users
 
@@ -17,7 +11,7 @@ You can grant {prod-short} users more cluster permissions by adding cluster role
 
 . Define the user roles name:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros"]
 ----
 $ USER_ROLES=__<name>__ <1>
 ----
@@ -25,16 +19,16 @@ $ USER_ROLES=__<name>__ <1>
 
 . Find out the namespace where the {prod-short} Operator is deployed:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros,+attributes"]
 ----
 $ OPERATOR_NAMESPACE=$({orch-cli} get pods -l app.kubernetes.io/component={prod-operator} -o jsonpath={".items[0].metadata.namespace"} --all-namespaces)
 ----
 
 . Create needed roles:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros"]
 ----
-$ {orch-cli} apply -f - <<EOF
+$ kubectl apply -f - <<EOF
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -56,9 +50,9 @@ EOF
 
 . Delegate the roles to the {prod-short} Operator:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros"]
 ----
-$ {orch-cli} apply -f - <<EOF
+$ kubectl apply -f - <<EOF
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
@@ -67,7 +61,7 @@ metadata:
     app.kubernetes.io/part-of: che.eclipse.org
 subjects:
   - kind: ServiceAccount
-    name: {prod-operator}
+    name: che-operator
     namespace: ${OPERATOR_NAMESPACE}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -79,20 +73,20 @@ EOF
 
 . Configure the {prod-short} Operator to delegate the roles to the `che` service account:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros"]
 ----
-$ {orch-cli} patch checluster {prod-checluster} \
+$ kubectl patch checluster eclipse-che \
   --patch '{"spec": {"components": {"cheServer": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
-  --type=merge -n {prod-namespace}
+  --type=merge -n eclipse-che
 ----
 
 . Configure the {prod-short} server to delegate the roles to a user:
 +
-[source,subs="+quotes,macros,attributes"]
+[source,subs="+quotes,+macros"]
 ----
-$ {orch-cli} patch checluster {prod-checluster} \
+$ kubectl patch checluster eclipse-che \
   --patch '{"spec": {"devEnvironments": {"user": {"clusterRoles": ["'${USER_ROLES}'"]}}}}' \
-  --type=merge -n {prod-namespace}
+  --type=merge -n eclipse-che
 ----
 
 . Wait for the rollout of the {prod-short} server components to be completed.
