Add role and rolebinding to dwo operators metrics setup
Signed-off-by: David Kwon <dakwon@redhat.com>

--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -42,7 +42,7 @@ spec:
 <2> The rate at which a target is scraped.
 ====
 
-. Create a Role and RoleBinding to allow Prometheus view the metrics.
+. Create a Role and RoleBinding to allow Prometheus to view the metrics.
 
 +
 .Role
