--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -33,16 +33,16 @@ spec:
       scheme: http
   namespaceSelector:
     matchNames:
-      - openshift-devspaces
+      - {prod-namespace} <1>
   selector:
     matchLabels:
-      app.kubernetes.io/name: devspaces
+      app.kubernetes.io/name: {prod-deployment}
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The rate at which a target is scraped.
 ====
 
-. Create a Role and RoleBinding to allow Prometheus view the metrics.
+. Create a Role and RoleBinding to allow Prometheus to view the metrics.
 
 +
 .Role
