fix: small typo in dashboard docs
Signed-off-by: dkwon17 <dakwon@redhat.com>

--- a/modules/administration-guide/pages/dashboard.adoc
+++ b/modules/administration-guide/pages/dashboard.adoc
@@ -12,7 +12,7 @@ The user dashboard is the landing page of {prod}.
 It is a React application. 
 The {prod-short} deployment starts it in the `{prod-deployment}-dashboard` Deployment.
 
-It need access to:
+It needs access to:
 
 * xref:devfile-registries.adoc[] 
 * xref:che-server.adoc[]
