--- a/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
+++ b/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
@@ -56,12 +56,13 @@ metadata:
     controller.devfile.io/mount-to-devworkspace: 'true'
   annotations:
     controller.devfile.io/mount-path: __</example/directory>__ <1>
+    controller.devfile.io/read-only: 'true'
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 3Gi <2>
+      storage: 3Gi <3>
   volumeName: __<pv_name>__
   storageClassName: manual
   volumeMode: Filesystem
