--- a/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
+++ b/modules/end-user-guide/partials/proc_requesting-persistent-storage-in-a-pvc.adoc
@@ -56,6 +56,7 @@ metadata:
     controller.devfile.io/mount-to-devworkspace: 'true'
   annotations:
     controller.devfile.io/mount-path: __</example/directory>__ <1>
+    controller.devfile.io/read-only: 'true'
 spec:
   accessModes:
     - ReadWriteOnce
