fix: update a 404'd URL to another website

--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -22,7 +22,7 @@
 
 * `jq`. See link:https://stedolan.github.io/jq/download/[Downloading `jq`].
 
-* `podman`. See link:https://podman.io/getting-started/installation[Installing Podman].
+* `podman`. See link:https://podman.io/docs/installation[Podman Installation Instructions].
 
 * An active `skopeo` session with administrative access to the __<my_registry>__ registry. See link:https://github.com/containers/skopeo/blob/main/install.md[Installing Skopeo], link:https://github.com/containers/skopeo#authenticating-to-a-registry[Authenticating to a registry], and link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/installing-mirroring-installation-images.html[Mirroring images for a disconnected installation].
 
