feat: Allow for the customization of user roles in Che (#2590)
* feat: Allow for the customization of user roles in Che

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fixes

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* fixes

Signed-off-by: Anatolii Bazko <abazko@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/nav.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@redhat.com>

* Update modules/administration-guide/pages/configuring-user-cluster-roles.adoc

Co-authored-by: Max Leonov <mleonov@re

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -67,6 +67,7 @@
 **** xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[]
 **** xref:configuring-oauth-1-for-a-bitbucket-server.adoc[]
 **** xref:configuring-oauth-2-for-microsoft-azure-devops-services.adoc[]
+*** xref:configuring-cluster-roles-for-users.adoc[]
 *** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
