chore: RHDEVDOCS-5317 update to OCP 4.12 as the recommended version and make sure all links have 'link:' prefix so they render correctly
Signed-off-by: Nick Boldt <nboldt@redhat.com>

--- a/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
+++ b/modules/administration-guide/pages/installing-che-on-openshift-using-the-web-console.adoc
@@ -38,7 +38,7 @@ oc create namespace {prod-namespace}
 
 . Select *Create*.
 +
-TIP: See https://docs.openshift.com/container-platform/4.10/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators].
+TIP: See link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/user/olm-creating-apps-from-installed-operators.html[Creating applications from installed Operators].
 
 .Verification
 
