--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator-on-openshift.adoc
@@ -7,7 +7,7 @@
 [id="repairing-the-devworkspace-operator-on-openshift"]
 = Repairing the {devworkspace} Operator on OpenShift
 
-Under certain conditions, such as https://docs.openshift.com/container-platform/4.10/operators/understanding/olm/olm-understanding-olm.html[OLM] restart or cluster upgrade, the {prod2} Operator for {prod-short} might automatically install the {devworkspace} Operator even when it is already present on the cluster. In that case, you can repair the {devworkspace} Operator on OpenShift as follows:
+Under certain conditions, such as link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/understanding/olm/olm-understanding-olm.html[OLM] restart or cluster upgrade, the {prod2} Operator for {prod-short} might automatically install the {devworkspace} Operator even when it is already present on the cluster. In that case, you can repair the {devworkspace} Operator on OpenShift as follows:
 
 .Prerequisites
 
