Various minor mark-up fixes.

--- a/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-linux-or-macos.adoc
+++ b/modules/administration-guide/examples/proc_che-installing-the-chectl-management-tool-on-linux-or-macos.adoc
@@ -15,23 +15,22 @@ This section describes how to install the `{prod-cli}` management tool on Linux 
 
 .Procedure
 
-. Run the following command in the terminal (this downloads and executes the `install.sh` script):
+. Download and execute the `install.sh` script):
 +
 [subs="+attributes"]
 ----
 $ bash <(curl -sL  https://www.eclipse.org/che/{prod-cli}/)
 ----
 
-. Run the following command to verify that the `{prod-cli}` tool is available at `/usr/local/bin/{prod-cli}`:
+. Verify that the `{prod-cli}` tool is available at `/usr/local/bin/{prod-cli}`:
 +
 [subs="+attributes"]
 ----
 $ which {prod-cli}
 /usr/local/bin/{prod-cli}
 ----
-+
 
-. Run the following command to verify that the version of {prod-cli} that is the expected one.
+. Verify that the version of {prod-cli} that is the expected one:
 +
 [subs="+attributes"]
 ----
