--- a/modules/administration-guide/examples/snip_che-supported-platforms.adoc
+++ b/modules/administration-guide/examples/snip_che-supported-platforms.adoc
@@ -5,7 +5,7 @@ You can install {prod} on:
 * {kubernetes} infrastructures starting at version {kube-ver-min}
 * {ocp} starting at version {ocp4-ver}
 
-You can install {prod} on all major Public Clouds such as:
+You can install {prod} on all major public clouds, such as:
 
 * Amazon Web Services
 * Google Cloud
@@ -13,13 +13,12 @@ You can install {prod} on all major Public Clouds such as:
 * Microsoft Azure
 * Rancher
 
-WARNING: Setting up link:https://kubernetes.io/docs/reference/access-authn-authz/authentication/[Users' Authentication] is required for deploying {prod-short} on {kubernetes} infrastructures. For {ocp} no additional setup is needed.
+WARNING: Configuring link:https://kubernetes.io/docs/reference/access-authn-authz/authentication/[user authentication] is required for deploying {prod-short} on {kubernetes} infrastructures. For {ocp}, no additional setup is needed.
 
-The following options are available for the local installation:
+The following options are available for local installations:
 
 * link:https://minikube.sigs.k8s.io/docs/[minikube]
-* link:https://developers.redhat.com/products/openshift-local/overview[Red Hat OpenShift Local
-(formerly Red Hat CodeReady Containers)]
+* link:https://developers.redhat.com/products/openshift-local/overview[Red Hat OpenShift Local (formerly Red Hat CodeReady Containers)]
 
 .Additional resources
 
