--- a/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
+++ b/modules/administration-guide/pages/installing-che-using-storage-classes.adoc
@@ -18,9 +18,7 @@ To configure {prod-short} to use a configured infrastructure storage, install {p
 * A storage type
 * And many others
 
-{prod-short} has one component that requires persistent volumes to store data:
-
-  * A {prod-short} workspace. {prod-short} workspaces store source code using volumes, for example `/projects` volume.
+{prod-short} has one component that requires persistent volumes to store data: A {prod-short} workspace. {prod-short} workspaces store source code using volumes, for example the  `/projects` volume.
 
 [NOTE]
 ====
@@ -31,13 +29,13 @@ To configure {prod-short} to use a configured infrastructure storage, install {p
 
 * {prod-short} does not create persistent volumes in the infrastructure.
 * {prod-short} uses persistent volume claims (PVC) to mount persistent volumes.
-* The {prod-short} server creates  persistent volume claims.
+* The {prod-short} server creates persistent volume claims.
 +
 A user defines a storage class name in the {prod-short} configuration to use the storage classes feature in the {prod-short} PVC. With storage classes, a user configures infrastructure storage in a flexible way with additional storage parameters. It is also possible to bind a static provisioned persistent volumes to the {prod-short} PVC using the class name.
 
 .Procedure
 
-Use CheCluster Custom Resource definition to define storage classes:
+Use the `CheCluster` Custom Resource definition to define storage classes:
 
 . Define storage class names: configure the `CheCluster` Custom Resource, and install {prod-short}. See xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[].
 +
@@ -87,5 +85,4 @@ You must provide valid file permissions for volumes. You can do it using storage
 .Additional resources
 
 * xref:using-chectl-to-configure-the-checluster-custom-resource-during-installation.adoc[]
-
 * xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
