--- a/modules/administration-guide/pages/removing-user-data-in-compliance-with-the-gdpr.adoc
+++ b/modules/administration-guide/pages/removing-user-data-in-compliance-with-the-gdpr.adoc
@@ -19,17 +19,18 @@ WARNING: Removing user data as follows is irreversible! All removed data is dele
 
 . List all the users in the OpenShift cluster using the following command:
 +
-[source,shell,subs="+quotes,macros,attributes"]
+[subs="+quotes,macros,attributes"]
 ----
 $ oc get users
 ----
+
 . Delete the user entry:
-
-IMPORTANT: If the user has any associated resources (such as projects, roles, or service accounts), you need to delete those first before deleting the user.
-
-[source,shell,subs="+quotes,macros,attributes"]
++
+IMPORTANT: If the user has any associated resources (such as projects, roles, or service accounts), delete those first before deleting the user.
++
+[subs="+quotes,macros,attributes"]
 ----
-$ oc delete user <username>
+$ oc delete user _<username>_
 ----
 
 .Additional resources
