--- a/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
+++ b/modules/administration-guide/pages/understanding-the-checluster-custom-resource.adoc
@@ -9,18 +9,17 @@
 
 A default deployment of {prod-short} consists of a `CheCluster` Custom Resource parameterized by the {prod} Operator.
 
-The `CheCluster` Custom Resource is a {kubernetes} object. You can configure it by editing the `CheCluster` Custom Resource YAML file. This file contains sections to configure each component: `devWorkspace`, `cheServer`, `pluginRegistry`, `devfileRegistry`, `dashboard` and `imagePuller`.
+The `CheCluster` Custom Resource is a {kubernetes} object. You can configure it by editing the `CheCluster` Custom Resource YAML file. This file contains sections to configure each component: `devWorkspace`, `cheServer`, `pluginRegistry`, `devfileRegistry`, `dashboard`, and `imagePuller`.
 
 The {prod} Operator translates the `CheCluster` Custom Resource into a config map usable by each component of the {prod-short} installation.
 
-The {orch-name} platform applies the configuration to each component, and creates the necessary Pods. When {orch-name} detects changes in the configuration of a component, it restarts the Pods accordingly.
+The {orch-name} platform applies the configuration to each component and creates the necessary pods. When {orch-name} detects changes in the configuration of a component, it restarts the pods accordingly.
 
 .Configuring the main properties of the {prod-short} server component
-====
+
 . Apply the `CheCluster` Custom Resource YAML file with suitable modifications in the `cheServer` component section.
 . The Operator generates the `che` `ConfigMap`. 
-. {orch-name} detects changes in the `ConfigMap` and triggers a restart of the {prod-short} Pod.
-====
+. {orch-name} detects changes in the `ConfigMap` and triggers a restart of the {prod-short} pod.
 
 .Additional resources
 
