--- a/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
+++ b/modules/administration-guide/partials/proc_collecting-che-metrics-with-prometheus.adoc
@@ -43,7 +43,6 @@ spec:
 ====
 
 . Create a Role and RoleBinding to allow Prometheus to view the metrics.
-
 +
 .Role
 ====
@@ -68,7 +67,6 @@ rules:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 ====
-
 +
 .RoleBinding
 ====
@@ -111,14 +109,14 @@ To troubleshoot missing metrics, view the Prometheus container logs for possible
 
 . Get the name of the Prometheus pod:
 +
-[source,yaml,subs="+quotes"]
+[subs="+quotes"]
 ----
 $ oc get pods -l app.kubernetes.io/name=prometheus -n openshift-monitoring -o=jsonpath='{.items[*].metadata.name}'
 ----
 
 . Print the last 20 lines of the Prometheus container logs from the Prometheus pod from the previous step:
 +
-[source,yaml,subs="+quotes"]
+[subs="+quotes"]
 ----
 $ oc logs --tail=20 __<prometheus_pod_name>__ -c prometheus -n openshift-monitoring
 ----
@@ -128,7 +126,5 @@ $ oc logs --tail=20 __<prometheus_pod_name>__ -c prometheus -n openshift-monitor
 [role="_additional-resources"]
 .Additional resources
 
-
 * link:https://prometheus.io/docs/prometheus/latest/querying/basics/[Querying Prometheus]
-
 * link:https://prometheus.io/docs/concepts/metric_types/[Prometheus metric types]
