--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -67,7 +67,7 @@ components:
 
 Providing enough memory::
 +
-Plug-ins consume CPU and memory resources. For example, when a plugin provides IntelliSense features, collecting data can consume all the memory allocated to the container.
+Plugins consume CPU and memory resources. For example, when a plugin provides IntelliSense features, collecting data can consume all the memory allocated to the container.
 +
 Providing more memory to the container can increase performance. Ensure that memory settings in the devfile definition `devfile.yaml` file are correct.
 +
