--- a/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
+++ b/modules/administration-guide/partials/snip_preparing-images-for-a-restricted-environment.adoc
@@ -4,7 +4,6 @@
 // ../pages/installing-che-in-a-restricted-environment.adoc
 // ../pages/upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc
 
-
 * The OpenShift cluster has at least 64 GB of disk space.
 
 * The OpenShift cluster is ready to operate on a restricted network, and the OpenShift control plane has access to the public internet. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/index.html[About disconnected installation mirroring] and link:https://docs.openshift.com/container-platform/{ocp4-ver}/operators/admin/olm-restricted-networks.html[Using Operator Lifecycle Manager on restricted networks].
@@ -24,13 +23,13 @@
 
 * `podman`. See link:https://podman.io/docs/installation[Podman Installation Instructions].
 
-* An active `skopeo` session with administrative access to the __<my_registry>__ registry. See link:https://github.com/containers/skopeo/blob/main/install.md[Installing Skopeo], link:https://github.com/containers/skopeo#authenticating-to-a-registry[Authenticating to a registry], and link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/installing-mirroring-installation-images.html[Mirroring images for a disconnected installation].
+* An active `skopeo` session with administrative access to the __<my_registry>__ registry. See link:https://github.com/containers/skopeo/blob/main/install.md[Installing Skopeo], link:https://github.com/containers/skopeo#authenticating-to-a-registry[Authenticating to a registry] and link:https://docs.openshift.com/container-platform/{ocp4-ver}/installing/disconnected_install/installing-mirroring-installation-images.html[Mirroring images for a disconnected installation].
 
 * `{prod-cli}` for {prod-short} version {prod-ver}. See xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
-. Download and execute the mirroring script to install a custom Operator catalog and mirror the related images: xref:attachment$restricted-environment/prepare-restricted-environment.sh[prepare-restricted-environment.sh].
+. Download and execute the mirroring script to install a custom Operator catalog and mirror the related images: xref:attachment$restricted-environment/prepare-restricted-environment.sh[`prepare-restricted-environment.sh`].
 +
 [subs="+attributes,+quotes"]
 ----
@@ -44,4 +43,3 @@ $ bash prepare-restricted-environment.sh \
   --my_registry "__<my_registry>__" \
   --my_catalog "__<my_catalog>__"
 ----
-
