--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -16,7 +16,11 @@ Working with {prod-short} in your browser involves multiple URLs:
 
 With {prod-short}, you can visit a URL in your browser to start a new workspace that contains a clone of a Git repository. This way, you can clone a Git repository that is hosted on GitHub, a GitLab instance, or a Bitbucket server.
 
-TIP: You can also use the *Git Repo URL ** field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
+pass:[<!-- vale RedHat.Spelling = NO -->]
+
+TIP: You can also use the *Git Repo URL \** field on the *Create Workspace* page of your {prod-short} dashboard to enter the URL of a Git repository to start a new workspace.
+
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 .Prerequisites
 
@@ -26,6 +30,7 @@ TIP: You can also use the *Git Repo URL ** field on the *Create Workspace* page 
 * Your Git repository maintainer keeps the `devfile.yaml` or `.devfile.yaml` file in the root directory of the Git repository. (For alternative file names and file paths, see xref:optional-parameters-for-the-urls-for-starting-a-new-workspace.adoc[].)
 +
 TIP: You can also start a new workspace by supplying the URL of a Git repository that contains no devfile. Doing so results in a workspace with Universal Developer Image and with Microsoft Visual Studio Code - Open Source as the workspace IDE.
+
 //provide a link to a page about the Universal Developer Image similar to https://developers.redhat.com/products/rhel/ubi for UBI and, if applicable, devfile-less defaults for new workspaces. max-cx
 
 .Procedure
@@ -35,7 +40,7 @@ To start a new workspace with a clone of a Git repository:
 . Optional: Visit your {prod-short} dashboard pages to authenticate to your organization's instance of {prod-short}.
 
 . Visit the URL to start a new workspace using the basic syntax:
-[source,subs="+quotes,+attributes,+macros"]
+[subs="+quotes,+attributes,+macros"]
 +
 ----
 pass:c,a,q[{prod-url}]#__<git_repository_url>__
@@ -44,7 +49,7 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__
 [TIP]
 ====
 You can extend this URL with optional parameters:
-[source,subs="+quotes,+attributes,+macros"]
+[subs="+quotes,+attributes,+macros"]
 ----
 pass:c,a,q[{prod-url}]#__<git_repository_url>__?__<optional_parameters>__ <1>
 ----
@@ -53,14 +58,11 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?__<optional_parameters>__ <1>
 +
 .A URL for starting a new workspace
 ====
-
 `pass:c,a,q[{prod-url}#https://github.com/che-samples/cpp-hello-world]`
-
 ====
 +
 .The URL syntax for starting a new workspace with a clone of a GitHub-hosted repository
 ====
-
 With GitHub and GitLab, you can even use the URL of a specific branch of the repository to be cloned:
 
 * `pass:c,a,q[{prod-url}#https://github.com/__<user_or_org>__/__<repository>__]` starts a new workspace with a clone of the default branch.
@@ -70,28 +72,20 @@ With GitHub and GitLab, you can even use the URL of a specific branch of the rep
 +
 .The URL syntax for starting a new workspace with a clone of a BitBucket Server repository
 ====
-
 * `pass:c,a,q[{prod-url}#https://<bb-host>/scm/<project-key>/<repository_name>.git]` starts a new workspace with a clone of the default branch.
 * `pass:c,a,q[{prod-url}#https://<bb-host>/users/<user-slug>/repos/<repo-name>/]` starts a new workspace with a clone of the default branch, if a repository was created under the user profile.
 * `pass:c,a,q[{prod-url}#https://<bb-host>/users/<user-slug>/repos/<repo-name>/browse?at=refs%2Fheads%2F<branch-name>]` starts a new workspace with a clone of the specified branch.
-
 ====
 +
-After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page.
-+
-When the new workspace is ready, the workspace IDE loads in the browser tab.
-+
-A clone of the Git repository is present in the filesystem of the new workspace.
-+
-The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
+After you enter the URL to start a new workspace in a browser tab, it renders the workspace-starting page. When the new workspace is ready, the workspace IDE loads in the browser. A clone of the Git repository is present in the filesystem of the new workspace. The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
 
 [TIP]
 ====
 Although this is not possible in the address bar, you can add a URL for starting a new workspace as a bookmark by using the browser bookmark manager:
 
-* In Mozilla Firefox, go to *☰* *>* *Bookmarks* *>* *Manage bookmarks Ctrl+Shift+O* *>* *Bookmarks Toolbar* *>* *Organize* *>* *Add bookmark*.
+* In Mozilla Firefox, go to *☰ > Bookmarks > Manage bookmarks > Bookmarks Toolbar > Organize > Add bookmark*.
 
-* In Google Chrome, go to *⋮* *>* *Bookmarks* *>* *Bookmark manager* *>* *Bookmarks bar* *>* *⋮* *>* *Add new bookmark*.
+* In Google Chrome, go to *⋮ > Bookmarks > Bookmark manager > Bookmarks bar > ⋮ > Add new bookmark*.
 ====
 
 .Additional resources
