--- a/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-webview-loading-error.adoc
@@ -4,19 +4,18 @@
 :navtitle: Troubleshooting webview loading error
 :page-aliases: .:troubleshooting-webview-loading-error.adoc
 
-[id="troubleshooting-webview-loading-error"]
+pass:[<!-- vale RedHat.Spelling = NO -->]
 
+[id="troubleshooting-webview-loading-error"]
 = Troubleshooting Webview loading error
 
-pass:[<!-- vale RedHat.Spelling = NO -->]
 
 If you use Microsoft Visual Studio Code - Open Source in a private browsing window, you might encounter the following error message: *Error loading webview: Error: Could not register service workers*.
 
-This is a known issue affecting following browsers:
+This is a known issue affecting the following browsers:
 
 * Google Chrome in Incognito mode
 * Mozilla Firefox in Private Browsing mode
-
 
 .Dealing with the webview error in a private browsing window
 [cols="25h,~"]
@@ -27,13 +26,7 @@ This is a known issue affecting following browsers:
 | Go to *Settings* -> *Privacy and security* -> *Cookies and other site data* -> *Allow all cookies*.
 
 | Mozilla Firefox
-| Webviews are not supported in Private Browsing mode. See link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[this reported bug] for details.
+| Webviews are not supported in Private Browsing mode. See link:https://bugzilla.mozilla.org/show_bug.cgi?id=1320796[this Mozilla Firefox bug] for details.
 |===
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
-
-
-
-
-
-
