--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -35,8 +35,10 @@ You can create and apply multiple access-token Secrets per Git provider. You mus
 ====
 On OpenShift, you can use the `oc` command-line tool to log in to the cluster:
 
-`$ oc login pass:c,a,q[{prod-url}] --username=__<my_user>__`
-
+[subs="+quotes,+attributes,+macros"]
+----
+$ oc login pass:c,a,q[{prod-url}] --username=__<my_user>__
+----
 ====
 
 .Procedure
@@ -47,10 +49,12 @@ On OpenShift, you can use the `oc` command-line tool to log in to the cluster:
 +
 [TIP]
 ====
-If you have the link:https://www.gnu.org/software/coreutils/base64[base64] command-line tools installed in the operating system, you can use the command line:
+If you have the link:https://www.gnu.org/software/coreutils/base64[base64] command-line tools installed, you can use the command line:
 
-`$ echo -n '__<your_access_token_string>__' | base64`
-
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<your_access_token_string>__' | base64
+----
 ====
 
 . Go to `pass:c,a,q[{prod-url}]/api/user/id` in the web browser to get your {prod-short} user ID.
@@ -76,7 +80,6 @@ data:
   token: __<Base64_encoded_access_token>__
 type: Opaque
 ----
-+
 <1> Your {prod-short} user ID.
 <2> The Git provider name: `github` or `gitlab` or `bitbucket-server` or `azure-devops`.
 <3> The Git provider URL.
@@ -93,12 +96,17 @@ On OpenShift:
 
 * The `oc` command-line tool can return the namespace you are currently on in the cluster, which you can use to check your current namespace:
 +
-`$ oc project`
+[subs="+quotes,+attributes,+macros"]
+----
+$ oc project
+----
 
-* You can switch to your {prod-short} user namespace on a command line if needed:
+* You can switch to your {prod-short} user namespace on the command line if needed:
 +
-`$ oc project __<your_user_namespace>__`
-
+[subs="+quotes,+attributes,+macros"]
+----
+$ oc project __<your_user_namespace>__
+----
 ====
 
 . Apply the Secret.
@@ -106,7 +114,8 @@ On OpenShift:
 [TIP]
 ====
 On OpenShift, you can use the `oc` command-line tool:
-[source,subs="+quotes,+attributes"]
+
+[subs="+quotes,+attributes"]
 ----
 $ oc apply -f - <<EOF
 __<Secret_prepared_in_step_5>__
