fix: remove an xref that causes a ccutil error

--- a/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
+++ b/modules/end-user-guide/partials/proc_setting-up-che-editor-yaml.adoc
@@ -5,7 +5,7 @@ By using the `che-editor.yaml` file, you can set a common default IDE for your t
 
 .Procedure
 
-* In the remote Git repository of your project source code, create a `/.che/che-editor.yaml` file with lines that specify the relevant parameter, as described in xref:parameters-for-che-editor-yaml[Parameters for che-editor.yaml].
+* In the remote Git repository of your project source code, create a `/.che/che-editor.yaml` file with lines that specify the relevant parameter.
 
 .Verification
 
