fixup! update proc_using-a-git-provider-access-token.adoc

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -9,7 +9,7 @@
 
 pass:[<!-- vale RedHat.Spelling = NO -->]
 
-OAuth for GitHub, GitLab, Bitbucket, or Microsoft Azure Repos needs to be xref:administration-guide:configuring-oauth-for-git-providers.adoc[configured by the administrator] of your organization's {prod-short} instance. If your administrator could not configure it for {prod-short} users, the workaround is for you to apply your personal access token as a {kubernetes} Secret.
+OAuth for GitHub, GitLab, Bitbucket, or Microsoft Azure Repos needs to be xref:administration-guide:configuring-oauth-for-git-providers.adoc[configured by the administrator] of your organization's {prod-short} instance. If your administrator could not configure it for {prod-short} users, the workaround is for you to use a personal access token. You can configure personal access tokens on the *User Preferences* page of your {prod-short} dashboard: `pass:c,a,q[{prod-url}]/dashboard/#/user-preferences?tab=personal-access-tokens`, or apply it manually as a {kubernetes} Secret in the namespace.
 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
@@ -24,11 +24,6 @@ After applying the Secret, you can create workspaces with clones of private Git 
 pass:[<!-- vale RedHat.Spelling = YES -->]
 
 You can create and apply multiple access-token Secrets per Git provider. You must apply each of those Secrets in your user {orch-namespace}.
-
-[NOTE]
-====
-You can configure personal access tokens in *User Preferences* page (`pass:c,a,q[{prod-url}]/dashboard/#/user-preferences?tab=personal-access-tokens`) of your {prod-short} dashboard.
-====
 
 .Prerequisites
 
