Add clarifications for the Bitbucket Server oAuth1 configuration
Signed-off-by: Igor Vinokur <ivinokur@redhat.com>

--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -13,7 +13,7 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 * The application link is set up on the Bitbucket Server.
 
-* The following Base64-encoded files, which were created when setting up the application link, are prepared:
+* The following Base64-encoded values, which were generated when setting up the application link, are prepared:
 ** `privatepkcs8-stripped.pem`
 ** `bitbucket-consumer-key`
 ** `bitbucket-shared-secret`
@@ -45,9 +45,14 @@ data:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
-<3> The Base64-encoded content of the `privatepkcs8-stripped.pem` file.
+<3> The content of the `privatepkcs8-stripped.pem` file.
 <4> The Base64-encoded content of the `bitbucket-consumer-key` file.
 <5> The Base64-encoded content of the `bitbucket-shared-secret` file.
++
+[IMPORTANT]
+====
+The content of the `privatepkcs8-stripped.pem` file is already Base64 encoded, so no need to run the `echoo <file-content> | base64` command, like for the `consumer-key` and `shared-secret` files.
+====
 
 . Apply the Secret:
 +
