--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -44,7 +44,21 @@ openssl rand -base64 24 > bitbucket-shared-secret
 
 . Paste the content of the `bitbucket-consumer-key` file as the *Consumer key*.
 
+. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the Bitbucket Server OAuth Secret:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-consumer-key file content>__' | base64
+----
+
 . Paste the content of the `bitbucket-shared-secret` file as the *Shared secret*.
+
+. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the Bitbucket Server OAuth Secret:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-shared-secret file content>__' | base64
+----
 
 . Enter `__<bitbucket_server_url>__/plugins/servlet/oauth/request-token` as the *Request Token URL*.
 
