Revert "fixup! Add clarifications for the Bitbucket Server oAuth1 configuration"
This reverts commit deff9d85c79a1868582fc0ab9e3630b1859e1b42.

--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -17,7 +17,7 @@ Set up an application link for OAuth 1.0 on the Bitbucket Server.
 
 .Procedure
 
-. On a command line, run the commands to create the Base64-encoded files for the next steps and for use when applying the application link Secret:
+. On a command line, run the commands to create the necessary files for the next steps and for use when applying the application link Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
