--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -46,8 +46,8 @@ data:
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
 <3> The content of the `privatepkcs8-stripped.pem` file, which was Base64-encoded when the file was generated.
-<4> The Base64-encoded content of the `bitbucket-consumer-key` file.
-<5> The Base64-encoded content of the `bitbucket-shared-secret` file.
+<4> The content of the `bitbucket-consumer-key` file, which you manually encoded to Base64.
+<5> The content of the `bitbucket-shared-secret` file, which you manually encoded to Base64.
 +
 [IMPORTANT]
 ====
