--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -44,7 +44,7 @@ openssl rand -base64 24 > bitbucket-shared-secret
 
 . Paste the content of the `bitbucket-consumer-key` file as the *Consumer key*.
 
-. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the Bitbucket Server OAuth Secret:
+. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
