--- a/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-application-link-on-the-bitbucket-server.adoc
@@ -53,7 +53,7 @@ $ echo -n '__<bitbucket-consumer-key file content>__' | base64
 
 . Paste the content of the `bitbucket-shared-secret` file as the *Shared secret*.
 
-. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the Bitbucket Server OAuth Secret:
+. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
