--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -13,7 +13,10 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 * The application link is set up on the Bitbucket Server.
 
-* The following Base64-encoded values, which were generated when setting up the application link, are prepared:
+* The following files, which were created when setting up the application link, are prepared:
+** `privatepkcs8-stripped.pem`
+** Base64-encoded `bitbucket-consumer-key`
+** Base64-encoded `bitbucket-shared-secret`
 ** `privatepkcs8-stripped.pem`
 ** `bitbucket-consumer-key`
 ** `bitbucket-shared-secret`
