--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -15,8 +15,8 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 * The following files, which were created when setting up the application link, are prepared:
 ** `privatepkcs8-stripped.pem`
-** Base64-encoded `bitbucket-consumer-key`
-** Base64-encoded `bitbucket-shared-secret`
+** `bitbucket-consumer-key`
+** `bitbucket-shared-secret`
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
