--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -22,6 +22,20 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Procedure
 
+. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-consumer-key file content>__' | base64
+----
+
+. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-shared-secret file content>__' | base64
+----
+
 . Prepare the Secret:
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
