--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -13,7 +13,7 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 * The application link is set up on the Bitbucket Server.
 
-* The following Base64-encoded files, which were created when setting up the application link, are prepared:
+* The following files, which were created when setting up the application link, are prepared:
 ** `privatepkcs8-stripped.pem`
 ** `bitbucket-consumer-key`
 ** `bitbucket-shared-secret`
@@ -21,6 +21,20 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
 .Procedure
+
+. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-consumer-key file content>__' | base64
+----
+
+. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
++
+[subs="+quotes,+attributes,+macros"]
+----
+$ echo -n '__<bitbucket-shared-secret file content>__' | base64
+----
 
 . Prepare the Secret:
 +
@@ -45,9 +59,9 @@ data:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
-<3> The Base64-encoded content of the `privatepkcs8-stripped.pem` file.
-<4> The Base64-encoded content of the `bitbucket-consumer-key` file.
-<5> The Base64-encoded content of the `bitbucket-shared-secret` file.
+<3> The content of the `privatepkcs8-stripped.pem` file, which was Base64-encoded when the file was generated.
+<4> The content of the `bitbucket-consumer-key` file, which you manually encoded to Base64.
+<5> The content of the `bitbucket-shared-secret` file, which you manually encoded to Base64.
 
 . Apply the Secret:
 +
