--- a/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-application-link-secret-for-the-bitbucket-server.adoc
@@ -22,14 +22,14 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Procedure
 
-. Encode the content of the `bitbucket-consumer-key` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
+. Encode the content of the `bitbucket-consumer-key` file to Base64:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
 $ echo -n '__<bitbucket-consumer-key file content>__' | base64
 ----
 
-. Encode the content of the `bitbucket-shared-secret` file to Base64 for use when applying the application link Secret for the Bitbucket Server:
+. Encode the content of the `bitbucket-shared-secret` file to Base64:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
@@ -60,8 +60,8 @@ data:
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
 <3> The content of the `privatepkcs8-stripped.pem` file, which was Base64-encoded when the file was generated.
-<4> The content of the `bitbucket-consumer-key` file, which you manually encoded to Base64.
-<5> The content of the `bitbucket-shared-secret` file, which you manually encoded to Base64.
+<4> The content of the `bitbucket-consumer-key` file, which you manually encoded to Base64 in step 1.
+<5> The content of the `bitbucket-shared-secret` file, which you manually encoded to Base64 in step 2.
 
 . Apply the Secret:
 +
