fix: set correct attribute for openvsx url
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -19,7 +19,7 @@ spec:
    components:
 # [...]
      pluginRegistry:
-       openVSXRegistryURL: __<your_open_vsx_registy>__
+       openVSXURL: __<your_open_vsx_registy>__
 # [...]
 ----
 
