--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -16,6 +16,7 @@
 *** xref:url-parameter-for-the-devfile-file-path.adoc[]
 *** xref:url-parameter-for-the-workspace-storage.adoc[]
 *** xref:url-parameter-for-additional-remotes.adoc[]
+*** xref:url-parameter-for-workspace-image.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
 ** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
