--- a/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
@@ -2,7 +2,7 @@
 :description: URL parameter for the workspace image
 :keywords: parameter, URL, workspace, image
 :navtitle: URL parameter for the workspace image
-:page-aliases: url-parameter-for-workspace-image.adoc
+//:page-aliases: url-parameter-for-workspace-image.adoc
 
 [id="url-parameter-for-workspace-image"]
 = URL parameter for the workspace image
