--- a/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
+++ b/modules/end-user-guide/pages/viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code.adoc
@@ -5,9 +5,9 @@
 :page-aliases:
 
 [id="viewing-language-servers-and-debug-adapters-logs-in-visual-studio-code"]
-= Viewing language server and debug adapter logs in Visual Studio Code
+= Viewing language server and debug adapter logs in Visual Studio Code - Open Source
 
-In the Visual Studio Code editor running in your workspace,
+In the Visual Studio Code - Open Source editor running in your workspace,
 you can configure the installed language server and debug adapter extensions to view their logs.
 
 .Procedure
