--- a/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
@@ -9,6 +9,6 @@
 
 You can use the `image` parameter to add a path to a container image in the following scenarios:
 
-* When the Git repository contains no devfile, and you want to start a new workspace with this container.
+* The Git repository contains no devfile, and you want to start a new workspace with this container.
 
-* When the Git repository contains a devfile, and you want this container image to run instead of the first `container` `image` listed in the `components` section of the devfile.
+* The Git repository contains a devfile, and you want this container image to run instead of the first `container` `image` listed in the `components` section of the devfile.
