--- a/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-workspace-image.adoc
@@ -1,11 +1,11 @@
 :_content-type: CONCEPT
-:description: URL parameter for the workspace image
-:keywords: parameter, URL, workspace, image
-:navtitle: URL parameter for the workspace image
-//:page-aliases: url-parameter-for-workspace-image.adoc
+:description: URL parameter for a container image
+:keywords: parameter, URL, container, image
+:navtitle: URL parameter for a container image
+//:page-aliases:
 
-[id="url-parameter-for-workspace-image"]
-= URL parameter for the workspace image
+[id="url-parameter-for-container-image"]
+= URL parameter for a container image
 
 You can use the `image` parameter to add a path to a container image in the following scenarios:
 
