--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -12,3 +12,10 @@ You can use the `image` parameter to add a path to a container image in the foll
 * The Git repository contains no devfile, and you want to start a new workspace with this container.
 
 * The Git repository contains a devfile, and you want this container image to run instead of the first `container` `image` listed in the `components` section of the devfile.
+
+The URL parameter for the path to a container image is `image=`:
+
+[subs="+quotes"]
+----
+https://<che_fqdn>#<git_repository_url>?image=<container_image_url>
+----
