--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -15,7 +15,7 @@ You can use the `image` parameter to add a path to a container image in the foll
 
 The URL parameter for the path to a container image is `image=`:
 
-[subs="+quotes"]
+[source,subs="+quotes,+attributes,+macros"]
 ----
-https://<che_fqdn>#<git_repository_url>?image=<container_image_url>
+pass:c,a,q[{prod-url}]#__<git_repository_url>__?image=__<container_image_url>__
 ----
