--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-container-image"]
 = URL parameter for a container image
 
-You can use the `image` parameter to add a path to a container image in the following scenarios:
+You can use the `image` parameter to use the custom reference to a container image in the following scenarios:
 
 * The Git repository contains no devfile, and you want to start a new workspace with this container.
 
