--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -11,7 +11,7 @@ You can use the `image` parameter to use the custom reference to a container ima
 
 * The Git repository contains no devfile, and you want to start a new workspace with the custom image.
 
-* The Git repository contains a devfile, and you want this container image to run instead of the first `container` `image` listed in the `components` section of the devfile.
+* The Git repository contains a devfile, and you want to override the first container image listed in the `components` section of the devfile.
 
 The URL parameter for the path to a container image is `image=`:
 
