--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -7,13 +7,13 @@
 [id="url-parameter-for-container-image"]
 = URL parameter for a container image
 
-You can use the `image` parameter to use the custom reference to a container image in the following scenarios:
+You can use the `image` parameter to use a custom reference to a container image in the following scenarios:
 
 * The Git repository contains no devfile, and you want to start a new workspace with the custom image.
 
 * The Git repository contains a devfile, and you want to override the first container image listed in the `components` section of the devfile.
 
-The URL parameter for the path to a container image is `image=`:
+The URL parameter for the path to the container image is `image=`:
 
 [source,subs="+quotes,+attributes,+macros"]
 ----
