--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -21,4 +21,4 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?image=__<container_image_url>__
 ----
 
 .Example
-https://che-dogfooding.apps.che-dev.x6e0.p1.openshiftapps.com/#https://github.com/eclipse-che/che-docs?i[…]ile/universal-developer-image:ubi8-latest
+link:https://che-dogfooding.apps.che-dev.x6e0.p1.openshiftapps.com/#https://github.com/eclipse-che/che-docs?i[…]ile/universal-developer-image:ubi8-latest
