--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -38,8 +38,9 @@ To start a new workspace with a clone of a Git repository:
 [source,subs="+quotes,+attributes,+macros"]
 +
 ----
-pass:c,a,q[{prod-url}]#__<git_repository_url>__
+pass:c,a,q[{prod-url}]#__<git_repository_url>__ # <1>
 ----
+<1> `__<git_repository_url>__` supports both the HTTPS and SSH protocols, so you can use `pass:c,a,q[https://]` or `git@` like when cloning a remote Git repository.
 +
 [TIP]
 ====
