fix: patch the admin guide and user guide

--- a/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
+++ b/modules/end-user-guide/partials/proc_automating-installation-of-microsoft-visual-studio-code-extensions-at-workspace-startup.adoc
@@ -5,11 +5,11 @@
 To have the Microsoft Visual Studio Code - Open Source IDE automatically install chosen extensions, you can add an `extensions.json` file to the remote Git repository that contains your project source code and that will be cloned into workspaces.
 
 .Prerequisites
-* {prod-short} has network access to the link:https://www.open-vsx.org/[OpenVSX registry].
+* The public OpenVSX registry at link:https://open-vsx.org[open-vsx.org] is selected and accessible over the internet. See xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[Selecting an Open VSX registry instance].
 +
 [TIP]
 ====
-To install recommended extensions in a restricted environment, consider these options:
+To install recommended extensions in a restricted environment, consider the following options instead:
 
 * xref:administration-guide:configuring-the-open-vsx-registry-url.adoc[] to point to your OpenVSX registry.
 
