--- a/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
+++ b/modules/administration-guide/pages/extensions-for-microsoft-visual-studio-code-open-source.adoc
@@ -9,9 +9,11 @@
 
 To manage extensions, link:https://github.com/microsoft/vscode[this IDE] uses one of these link:https://open-vsx.org/about[Open VSX] registry instances:
 
-* The embedded default instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org]. This subset is customizable.
+* The embedded default instance of the Open VSX registry that runs in the `plugin-registry` pod of {prod-short} to support air-gapped, offline, and proxy-restricted environments. The embedded Open VSX registry contains only a subset of the extensions published on link:https://open-vsx.org[open-vsx.org]. This subset is xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customizable].
+
 * The public link:https://open-vsx.org[open-vsx.org] registry that is accessed over the internet.
-* A standalone Open VSX registry instance, deployed on a network accessible from {prod-short} workspace pods.
+
+* A standalone Open VSX registry instance that is deployed on a network accessible from {prod-short} workspace pods.
 
 include::partial$proc_selecting-an-open-vsx-registry-instance.adoc[leveloffset=+1]
 
