--- a/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance.adoc
@@ -3,9 +3,7 @@
 [id="adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance"]
 = Adding or removing extensions in the embedded Open VSX registry instance
 
-You can add or remove extensions in the embedded Open VSX registry instance deployed by {prod-short} to support offline and proxied environments.
-
-This will create a custom build of the Open VSX registry, which can be used in your organization’s workspaces. 
+You can add or remove extensions in the embedded Open VSX registry instance. This results in a custom build of the Open VSX registry that can be used in your organization’s workspaces. 
 
 pass:[<!-- vale RedHat.TermsErrors = NO -->]
 
