--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -3,9 +3,16 @@
 [id="selecting-an-open-vsx-registry-instance"]
 = Selecting an Open VSX registry instance
 
-The Open VSX registry at `pass:c,a,q[https://open-vsx.org]` is the default if resolved from within your organization's cluster. If not, then the embedded Open VSX registry within the {prod-short} `plugin-registry` pod is the default.
+The embedded Open VSX registry within the {prod-short} `plugin-registry` is the default.
 
-If the default Open VSX registry instance is not what you need, you can select another Open VSX registry instance as follows.
+TIP: xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[You can customize the list of extensions included in the default embedded Open VSX registry].
+
+If the default Open VSX registry instance is not what you need, you can select one of the following instances:
+
+* The Open VSX registry instance at `pass:c,a,q[https://open-vsx.org]` that requires access to the internet.
+
+* A standalone Open VSX registry instance whose URL is accessible from within your organization's cluster and not blocked by a proxy.
+
 
 .Procedure
 
@@ -16,14 +23,6 @@ If the default Open VSX registry instance is not what you need, you can select a
 spec:
   components:
     pluginRegistry:
-      openVSXURL: "__<url_of_an_open_vsx_registry_instance>__"
+      openVSXURL: "__<url_of_an_open_vsx_registry_instance>__" # <1>
 ----
-+
-[TIP]
-====
-* The default `openVSXURL` value is `pass:c,a,q[https://open-vsx.org]`.
- 
-* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. You can xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customize the list of included extensions].
-
-* You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance if its URL is accessible from within your organization's cluster and not blocked by a proxy. 
-====
+<1> For example: `openVSXURL: "pass:c,a,q[https://open-vsx.org]"`.
