fix: update UI label reference to correct abbreviation style

--- a/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
+++ b/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
@@ -26,4 +26,4 @@ Because the FQDN of {prod-short} is part of the dashboard URL, users get the FQD
 ----
 $ {prod-cli} dsc server:status
 ----
-. Copy the *{prod} Url* without the trailing `/dashboard/`.
+. Copy the *{prod} URL* without the trailing `/dashboard/`.
