fix: based on Aidan's feedback

--- a/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
+++ b/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
@@ -1,6 +1,6 @@
 :_content-type: PROCEDURE
 :description: Finding the FQDN of your organization's instance of {prod-short}
-:keywords: administration-guide, fqdn, url
+:keywords: administration-guide, FQDN, URL
 :navtitle: Finding the FQDN of your organization's instance of {prod-short}
 //:page-aliases:
 
