--- a/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
+++ b/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
@@ -7,7 +7,7 @@
 [id="finding-the-fqdn-of-your-organizations-instance"]
 = Finding the FQDN of your organization's instance of {prod-short}
 
-You can get the FQDN of your organization's instance of {prod-short} from the command line or in the OpenShift web console.
+You can get the FQDN of your organization's instance of {prod-short} on the command line or in the OpenShift web console.
 
 TIP: You can find the FQDN for your organization's {prod-short} instance in the *Administrator* view of the OpenShift web console as follows. Go to *Operators* -> *OperatorHub* -> *Installed Operators* -> *{prod} instance Specification* -> *{prod-checluster}* -> *{prod} URL*.
 
