fix: typo in the block

--- a/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
+++ b/modules/administration-guide/pages/finding-the-fqdn-of-your-organizations-instance.adoc
@@ -24,6 +24,6 @@ Because the FQDN of {prod-short} is part of the dashboard URL, users get the FQD
 +
 [subs="+attributes,+quotes"]
 ----
-$ {prod-cli} dsc server:status
+$ {prod-cli} server:status
 ----
 . Copy the *{prod} URL* without the trailing `/dashboard/`.
