--- a/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-container-image.adoc
@@ -21,4 +21,4 @@ pass:c,a,q[{prod-url}]#__<git_repository_url>__?image=__<container_image_url>__
 ----
 
 .Example
-pass:c,a,q[{prod-url}]#https://github.com/eclipse-che/che-docs?image=quay.io/devfile/universal-developer-image:ubi8-latest
+`pass:c,a,q[{prod-url}]#https://github.com/eclipse-che/che-docs?image=quay.io/devfile/universal-developer-image:ubi8-latest`
