fix: modify draft based on Angel's review suggestion

--- a/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
+++ b/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
@@ -1,13 +1,13 @@
 :_content-type: PROCEDURE
-:description: Finding the FQDN of your organization's instance of {prod-short}
+:description: Finding the fully qualified domain name (FQDN)
 :keywords: administration-guide, FQDN, URL
-:navtitle: Finding the FQDN of your organization's instance of {prod-short}
+:navtitle: Finding the fully qualified domain name (FQDN)
 //:page-aliases:
 
-[id="finding-the-fqdn-of-your-organizations-instance"]
-= Finding the FQDN of your organization's instance of {prod-short}
+[id="finding-the-fully-qualified-domain-name-fqdn"]
+= Finding the fully qualified domain name (FQDN)
 
-You can get the FQDN of your organization's instance of {prod-short} on the command line or in the OpenShift web console.
+You can get the fully qualified domain name (FQDN) of your organization's instance of {prod-short} on the command line or in the OpenShift web console.
 
 TIP: You can find the FQDN for your organization's {prod-short} instance in the *Administrator* view of the OpenShift web console as follows. Go to *Operators* -> *OperatorHub* -> *Installed Operators* -> *{prod} instance Specification* -> *{prod-checluster}* -> *{prod} URL*.
 
