fix: update the files in response to Valerii's feedback

--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -3,16 +3,13 @@
 [id="selecting-an-open-vsx-registry-instance"]
 = Selecting an Open VSX registry instance
 
-The embedded Open VSX registry within the {prod-short} `plugin-registry` is the default.
-
-TIP: xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[You can customize the list of extensions included in the default embedded Open VSX registry].
+include::example$snip_{project-context}-default-vsx-registry.adoc[]
 
 If the default Open VSX registry instance is not what you need, you can select one of the following instances:
 
-* The Open VSX registry instance at `pass:c,a,q[https://open-vsx.org]` that requires access to the internet.
+include::example$snip_{project-context}-non-default-vsx-registry-instance.adoc[]
 
-* A standalone Open VSX registry instance whose URL is accessible from within your organization's cluster and not blocked by a proxy.
-
+* A standalone Open VSX registry instance that is deployed on a network accessible from {prod-short} workspace pods.
 
 .Procedure
 
