--- a/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
+++ b/modules/administration-guide/pages/finding-the-fully-qualified-domain-name-fqdn.adoc
@@ -16,7 +16,7 @@ Because the FQDN of {prod-short} is part of the dashboard URL, users get the FQD
 .Prerequisites
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
-* `{prod-cli}`. See: xref:installing-the-chectl-management-tool.adoc[].
+* `{prod-cli}`. See xref:installing-the-chectl-management-tool.adoc[].
 
 .Procedure
 
