--- a/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
+++ b/modules/administration-guide/partials/proc_selecting-an-open-vsx-registry-instance.adoc
@@ -23,3 +23,12 @@ spec:
       openVSXURL: "__<url_of_an_open_vsx_registry_instance>__" # <1>
 ----
 <1> For example: `openVSXURL: "pass:c,a,q[https://open-vsx.org]"`.
++
+[TIP]
+==== 
+
+* To select the embedded Open VSX registry instance in the `plugin-registry` pod, use `openVSXURL: ''`. You can xref:adding-or-removing-extensions-in-the-embedded-open-vsx-registry-instance[customize the list of included extensions].
+
+* You can also point `openVSXURL` at the URL of a standalone Open VSX registry instance if its URL is accessible from within your organization's cluster and not blocked by a proxy. 
+
+====
